--- a/css/style.css
+++ b/css/style.css
@@ -356,42 +356,112 @@ section .title p {
 
 /* about */ 
 .about .title {
-   left: 200px;
+   left: 300px;
 }
 .about {
    position: relative;
 }
 .about ul {
+   /* background: #ffbbe0; */
    width: 1200px;
+   height: 1000px;
    margin: 1% auto;
-   overflow: hidden;
+   /* overflow: hidden; */
 }
 .about ul li {
-   width: 900px;
-   margin: 50px 200px;
-   font-size: 21px;
+   width: 1200px;
+   font-size: 24px;
    position: relative;
 }
-.about ul li .img:before {
-   position: absolute;
-   width: 500px;
-   height: 300px;
-   background: rgba(0, 0, 0, 0.541);
-}
 .about ul li .txt {
+   /* border: 4px solid #ffbbe0; */
+   border-radius: 3%;
+   padding: 20px;
+   /* color: #fff; */
+}
+.about ul li:nth-child(1) .txt{
    position: absolute;
-   right: 50px;
-   top: 10px;
-   border: 1px solid black;
-   width: 310px;
-   height: 300px;
-   background: #fff;
-   padding: 10px;
+   right: 550px;
+   top: 100px;
+   width: 460px;
+   height: auto;
+}
+.about ul li:nth-child(2) .txt{
+   position: absolute;
+   left: 750px;
+   top: 640px;
+   width: 300px;
 }
 .about ul li .img img{
-   border: 1px solid black;
-   width: 600px;
+   border-radius: 2%;
+}
+.about ul li:nth-child(1) .img img{
+   width: 400px;
    height: auto;
+   position: absolute;
+   right: 10%;
+   top: -50px;
+}
+.about ul li:nth-child(1) .img:before {
+   content: '';
+   position: absolute;
+   border: 3px solid #1abc9c;
+   border-radius: 2%;
+   width: 400px;
+   height: 533px;
+   right: 8.5%;
+   top: -35px;
+   /* background-color: #ffbbe0; */
+}
+.about ul li:nth-child(1) .img:after {
+   content: '';
+   position: absolute;
+   /* border: 4px solid #1abc9c; */
+   border-radius: 2%;
+   width: 400px;
+   height: 533px;
+   right: 10%;
+   top: -50px;
+   background: rgba(255, 255, 255, 0.527);
+   transition: all 0.3s;
+}
+.about ul li:nth-child(2) .img img{
+   position: absolute;
+   left: 9%;
+   top: 620px;
+   width: 560px;
+   height: auto;
+}
+.about ul li:nth-child(2) .img:before {
+   content: '';
+   position: absolute;
+   /* border: 3px solid #1abc9c; */
+   border-radius: 2%;
+   width: 560px;
+   height: 345px;
+   left: 10%;
+   top: 635px;
+   transition: all 0.3s;
+   background-color: #ffbbe091;
+}
+.about ul li:nth-child(2) .img:after {
+   content: '';
+   position: absolute;
+   /* border: 4px solid #1abc9c; */
+   border-radius: 2%;
+   width: 560px;
+   height: 345px;
+   left: 9%;
+   top: 620px;
+   background: rgba(255, 255, 255, 0.527);
+}
+.about ul li .img:hover:after{
+   transition: all 0.3s;
+   opacity: 0;
+}
+.about ul li .img:hover:before{
+   transition: all 0.3s;
+   transform: translateX(-1%) translateY(-1%);
 }
 /* skills */ 
 .skill .title {
