--- a/css/style.css
+++ b/css/style.css
@@ -362,9 +362,10 @@ section .title p {
    position: relative;
 }
 .about ul {
+   font-family: 'Nanum Pen Script', cursive;
    /* background: #ffbbe0; */
    width: 1200px;
-   height: 1000px;
+   height: 500px;
    margin: 1% auto;
    /* overflow: hidden; */
 }
@@ -375,7 +376,7 @@ section .title p {
 }
 .about ul li .txt {
    /* border: 4px solid #ffbbe0; */
-   border-radius: 3%;
+   font-size: 30px;
    padding: 20px;
    /* color: #fff; */
 }
@@ -388,12 +389,12 @@ section .title p {
 }
 .about ul li:nth-child(2) .txt{
    position: absolute;
-   left: 750px;
+   left: 720px;
    top: 640px;
-   width: 300px;
+   width: 320px;
 }
 .about ul li .img img{
-   border-radius: 2%;
+
 }
 .about ul li:nth-child(1) .img img{
    width: 400px;
@@ -405,24 +406,23 @@ section .title p {
 .about ul li:nth-child(1) .img:before {
    content: '';
    position: absolute;
-   border: 3px solid #1abc9c;
-   border-radius: 2%;
+   /* border: 3px solid #ff5492; */
    width: 400px;
    height: 533px;
    right: 8.5%;
-   top: -35px;
-   /* background-color: #ffbbe0; */
+   top: -30px;
+   background-color: #ffbbe088;
+   transition: all 0.3s;
 }
 .about ul li:nth-child(1) .img:after {
    content: '';
    position: absolute;
    /* border: 4px solid #1abc9c; */
-   border-radius: 2%;
    width: 400px;
    height: 533px;
    right: 10%;
    top: -50px;
-   background: rgba(255, 255, 255, 0.527);
+   background: rgba(0, 0, 0, 0.418);
    transition: all 0.3s;
 }
 .about ul li:nth-child(2) .img img{
@@ -436,11 +436,10 @@ section .title p {
    content: '';
    position: absolute;
    /* border: 3px solid #1abc9c; */
-   border-radius: 2%;
    width: 560px;
    height: 345px;
-   left: 10%;
-   top: 635px;
+   left: 10.5%;
+   top: 640px;
    transition: all 0.3s;
    background-color: #ffbbe091;
 }
@@ -448,12 +447,11 @@ section .title p {
    content: '';
    position: absolute;
    /* border: 4px solid #1abc9c; */
-   border-radius: 2%;
    width: 560px;
    height: 345px;
    left: 9%;
    top: 620px;
-   background: rgba(255, 255, 255, 0.527);
+   background: rgba(0, 0, 0, 0.418);
 }
 .about ul li .img:hover:after{
    transition: all 0.3s;
@@ -490,6 +488,7 @@ section .title p {
    overflow: hidden;
 }
 .skill li {
+   cursor: pointer;
    float: left;
    transform: translateX(50px);
    width: 400px;
@@ -507,12 +506,21 @@ section .title p {
    float: left;
    z-index: -1;
    opacity: 0.9;
+   transform: rotate(-10deg);
    animation: skillImg 1s infinite;
 }
 @keyframes skillImg {
-   0% { transform: translateX(-5px) rotate(-10deg);}
-   50% { transform: translateX(0px) rotate(0deg);}
-   100% { transform: translateX(-5px) rotate(-10deg);}
+   0% { transform: translateX(0px) rotate(-10deg);}
+   50% { transform: translateX(5px) rotate(0deg);}
+   100% { transform: translateX(0px) rotate(-10deg);}
+}
+.skill li:hover img {
+   animation: bigSkillImg 0.5s;
+   /* transform: scale(1.2); */
+}
+@keyframes bigSkillImg {
+   0% { transform: rotate(0deg); }
+   100% { transform: rotate(-370deg); }
 }
 .skill li:first-child img {
    top: -22px;
