--- a/css/style.css
+++ b/css/style.css
@@ -506,21 +506,22 @@ section .title p {
    float: left;
    z-index: -1;
    opacity: 0.9;
-   transform: rotate(-10deg);
+   transform: translateX(5px);
+   /* transform: rotate(-10deg); */
    animation: skillImg 1s infinite;
 }
 @keyframes skillImg {
-   0% { transform: translateX(0px) rotate(-10deg);}
-   50% { transform: translateX(5px) rotate(0deg);}
-   100% { transform: translateX(0px) rotate(-10deg);}
+   0% { transform: translateX(5px) rotate(0deg);}
+   50% { transform: translateX(0px) rotate(-10deg);}
+   100% { transform: translateX(5px) rotate(0deg);}
 }
 .skill li:hover img {
    animation: bigSkillImg 0.5s;
    /* transform: scale(1.2); */
 }
 @keyframes bigSkillImg {
-   0% { transform: rotate(0deg); }
-   100% { transform: rotate(-370deg); }
+   0% { transform: translateX(5px) rotate(0deg); }
+   100% { transform: translateX(5px) rotate(-360deg); }
 }
 .skill li:first-child img {
    top: -22px;
