--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,9 @@ header.on .menu ul.inner.on {
    transition: all 0.3s;
 }
 /* main */
+.main {
+   margin-bottom: 200px;
+}
 .main .slide li {
    width: 100%;
    height: 98vh;
@@ -365,7 +368,7 @@ section .title p {
    font-family: 'Nanum Pen Script', cursive;
    /* background: #ffbbe0; */
    width: 1200px;
-   height: 500px;
+   height: 1000px;
    margin: 1% auto;
    /* overflow: hidden; */
 }
@@ -376,7 +379,7 @@ section .title p {
 }
 .about ul li .txt {
    /* border: 4px solid #ffbbe0; */
-   font-size: 30px;
+   font-size: 32px;
    padding: 20px;
    /* color: #fff; */
 }
@@ -652,13 +655,13 @@ section.project .title {
    opacity: 0.8;
 }
 .project ul {
-   width: 1200px;
+   width: 1500px;
    margin: 5% auto;
    overflow: hidden;
 }
 .project ul li {
    float: left;
-   width: 400px;
+   width: 500px;
    /* margin-right: 3%; */
 }
 .project ul li:last-child {
@@ -673,7 +676,7 @@ section.project .title {
    width: 100%;
    overflow: hidden;
    position: relative;
-   height: 251px;
+   height: 300px;
 }
 .project ul li a p.img img {
    height: 100%;
@@ -687,7 +690,7 @@ section.project .title {
    /* background: #ffeaf55e; */
    background: rgba(255, 255, 255, 0.534);
    /* background: #dbdbdb56; */
-   height: 251px;
+   height: 300px;
    position: absolute;
    right: 0;
    top: 0;
