--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,700;1,700&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@400;500;700&family=Rubik&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gowun+Dodum&family=Josefin+Sans:ital,wght@0,700;1,700&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@400;500;700&family=Rubik&display=swap');
 
 /* reset */
 * { margin: 0; padding: 0; }
@@ -13,6 +12,8 @@ a:hover { text-decoration: none; color: inherit; }
 
 body {
    font-family: 'Noto Sans KR', sans-serif;
+   /* font-family: 'Gowun Dodum', sans-serif; */
+   /* font-weight: 1000; */
    /* font-family: 'Nanum Pen Script', cursive; */
    font-size: 14px;
    
@@ -368,8 +369,10 @@ section .title p {
    position: relative;
 }
 .about ul {
-   font-family: 'Nanum Pen Script', cursive;
+   /* font-family: 'Nanum Pen Script', cursive; */
+   /* font-family: 'Gowun Dodum', sans-serif; */
    /* background: #ffbbe0; */
+   /* font-weight: 600; */
    width: 1200px;
    height: 1000px;
    margin: 1% auto;
@@ -382,7 +385,7 @@ section .title p {
 }
 .about ul li .txt {
    /* border: 4px solid #ffbbe0; */
-   font-size: 32px;
+   font-size: 23px;
    padding: 20px;
    /* color: #fff; */
 }
@@ -467,6 +470,31 @@ section .title p {
    transition: all 0.3s;
    transform: translateX(-1%) translateY(-1%);
 }
+
+
+/* 타이틀 버블 효과 */
+.bubbles {
+   width: 200px;
+   /* display: inline-block;
+   font-family: arial;
+   position: relative; */
+}
+/* .bubbles h2 {
+   position: relative;
+   margin: 1em 0 0;
+   color: #181818;
+   z-index: 2;
+} */
+.individual-bubble {
+   width: 200px;
+   position: absolute;
+   border-radius: 100%;
+   bottom: 10px;
+   background-color: #FF5492;
+   z-index: -1;
+}
+
+
 /* skills */ 
 .skill .title {
    left: 700px;
