--- a/css/style.css
+++ b/css/style.css
@@ -519,6 +519,9 @@ section .title p {
 .about ul li:first-child .txt .btn {
    transform: translateX(210px);
 }
+.about ul li:last-child .txt .btn {
+   transform: translateX(0px);
+}
 .about ul li .txt .btn:after {
    content: '';
    width: 0%;
@@ -534,7 +537,7 @@ section .title p {
    transition: all 0.3s;
    width: 102%;
 }
-.about ul li .txt .notion_cursor {
+/* .about ul li .txt .notion_cursor {
    position: absolute;
    right: 68px;
    bottom: 5px;
@@ -542,7 +545,7 @@ section .title p {
    transform: rotate(-80deg);
    z-index: 2;
    transition: all 0.3s;
-}
+} */
 .about ul li .txt .cursor.click {
    animation: click linear 0.3s 1;
    transform: translateX(-20px) translateY(-4px) rotate(-80deg);
@@ -903,31 +906,41 @@ section.project .title {
    opacity: 0.8;
 }
 .project ul {
-   width: 1240px;
+   width: 1252px;
    margin: 5% auto;
    overflow: hidden;
 }
 .project ul li {
    float: left;
-   width: 400px;
-   margin-right: 20px;
+   width: 380px;
+   margin: 0px 16px 50px 16px;
+   border: 2px solid #7adfca;
+   border-radius: 8px;
+   height: 320px;
+   padding-top: 20px;
+   box-shadow: 7px 7px 0px #1abc9c65;
 }
-.project ul li:nth-child(3) {
+.project ul li:nth-child(odd) {
+   border: 2px solid #ffbbe0;
+   box-shadow: 7px 7px 0px #FFD8ED;
+}
+/* .project ul li:nth-child(3) {
    margin-right: 0px;
 }
 .project ul li:last-child {
    margin-right: 0;
-}
+} */
 .project ul li a {
    display: block;
    width: 100%;
    height: 100%;
 }
 .project ul li a p.img {
-   width: 100%;
+   margin: 0 auto;
+   width: 340px;
    overflow: hidden;
    position: relative;
-   height: 250px;
+   height: 220px;
    border-radius: 5px;
 }
 .project ul li a p.img img {
