--- a/css/style.css
+++ b/css/style.css
@@ -1037,6 +1037,27 @@ section.project > .title {
    font-size: 1.9vh;
    margin-right: 2%;
 } */
+.project .cursor {
+   position: absolute;
+   right: 15px;
+   bottom: 70px;
+   color: #ff5492;
+   transform: rotate(-80deg);
+   font-size: 20px;
+   z-index: 2;
+   transition: all 0.3s;
+   opacity: 0;
+}
+.project li:hover .cursor {
+   opacity: 1;
+   animation: project_click 0.6s 1;
+   transform: translateX(-145px) translateY(-90px) rotate(-80deg);
+   transition: all 0.3s;
+}
+@keyframes project_click {
+   0% { transform: translateX(0px) rotate(-80deg); }
+   100% { transform: translateX(-145px) translateY(-90px) rotate(-80deg); }
+}
 
 /* contact */
 section.contact .title {
