--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,9 @@ header.on .menu ul.inner.on {
 /* menu */
 .menu {
    position: absolute;
-   left: 55%;
    /* transform: translateX(-50%); */
-   width: 950px;
+   right: 0;
+   width: 55%;
 }
 .menu >li {
    float: left;
@@ -115,7 +115,7 @@ header.on .menu ul.inner.on {
    text-align: center;
    color: #fff;
    /* color: #000; */
-   font-size: 27px;
+   font-size: 26px;
    font-weight: 700;
    transition: all 0.3s;
 }
