--- a/css/style-reactive.css
+++ b/css/style-reactive.css
@@ -33,12 +33,15 @@
     .menu {
         position: absolute; 
         right: 0px;
-        width: 400px;
+        width: 440px;
     }
     .menu >li {
         margin-right: 5%;
     }
     .menu >li >a {
-       font-size: 15px;
+       font-size: 17px;
+    }
+    .menu >li:last-child {
+        margin-right: 2%;
     }
 }
