--- a/css/style.css
+++ b/css/style.css
@@ -103,14 +103,18 @@ header.on .menu ul.inner.on {
    line-height: 90px;
    position: relative;
    transition: all 0.3s;
-   margin-right: 7%;
+   margin-right: 4%;
 }
 .menu >li:last-child {
    margin-right: 0%;
 }
+.menu >li >span {
+   opacity: 0;
+   font-size: 30px;
+   font-weight: 700;
+   color: white;
+}
 .menu >li >a {
-   display: block;
-   width: 100%;
    height: 100%;
    text-align: center;
    color: #fff;
